infra/kubernetes/core-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sass-system
